@@ -19,9 +19,9 @@
 # gnulib modules used by this package.
 gnulib_modules="
     acl alloca btowc extensions getline getopt gettext localcharset
-    mbrlen mbrtowc memchr mbsinit mkstemp obstack pathmax rename snprintf
-    stdbool stat-macros strerror strverscmp unlocked-io vasnprintf verify
-    wcrtomb wctob"
+    mbrlen mbrtowc memchr mbsinit mkstemp obstack pathmax rename
+    selinux-h snprintf stdbool stat-macros strerror strverscmp unlocked-io
+    vasnprintf verify wcrtomb wctob"
 
 SKIP_PO=t
 checkout_only_file=
