@@ -1,3 +1,8 @@
+2009-06-25  Paolo Bonzini  <bonzini@gnu.org>
+
+	* autoboot.conf: Add selinux-h.
+	* execute.c: Copy over file creation context before creating a new file.
+
 2009-06-15  Paolo Bonzini  <bonzini@gnu.org>
 
 	* autoboot.conf: Add memchr again.
